[package]
name = "ezrs"
version = "0.1.0"
authors = ["guaifish <guaifish@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
read_input = "0.8.4"
counter = "0.5.2"
lazy_static = "1.4.0"
regex = "1.3.9"
textwrap = "0.12.1"
rust_decimal = "1.8.1"
rust_decimal_macros = "1.8.1"
rand = "0.7.3"
